--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -17,24 +17,24 @@
     <Grid x:Name="MainGrid">
 
         <Rectangle HorizontalAlignment="Center" Height="200" Stroke="Black" VerticalAlignment="Center" Width="400" StrokeThickness="2"/>
-        <TextBlock x:Name="Title" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="100" Text="???" FontSize="20"/>
+        <TextBlock x:Name="Title" HorizontalAlignment="Left" Margin="20,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="100" Text="???" FontSize="20"/>
         <Button x:Name="CloseButton" Content="X" HorizontalAlignment="Right" VerticalAlignment="Top" Width="20" Height="20" Margin="0,10,10,0" Click="CloseButton_Click"/>
         <Button x:Name="MinimizeButton" Content="--" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,40,0" Width="20" Height="20" FontWeight="Normal" Click="MinimizeButton_Click"/>
-        <Button x:Name="MainPageButton" Content="Main Page" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,25,15" Width="72" Height="20" Click="MainPageButton_Click" Visibility="Collapsed"/>
 
         <Grid x:Name="FirstGrid" HorizontalAlignment="Center" VerticalAlignment="Center" Width="200" Height="100">
             <TextBox x:Name="FirstTextBox" TextWrapping="Wrap" Width="160" TextAlignment="Center" FontSize="16" Height="23" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,25,0,0"/>
             <Button x:Name="ConfirmButton" Content="Confirm" Click="Button_Click" FontSize="16" Width="70" Height="24" HorizontalAlignment="Center" VerticalAlignment="Bottom" IsDefault="True"/>
         </Grid>
 
-        <Grid x:Name="CalcGrid" HorizontalAlignment="Center" VerticalAlignment="Top" Width="300" Height="150" Visibility="Collapsed" Margin="0,25,0,0" Grid.RowSpan="2">
-            <TextBox x:Name="DefLv" HorizontalAlignment="Left" Margin="110,25,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="17"/>
-            <TextBox x:Name="Score" HorizontalAlignment="Left" Margin="110,55,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="17"/>
-            <TextBox x:Name="PTT" HorizontalAlignment="Left" Margin="110,85,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="17"/>
-            <TextBlock HorizontalAlignment="Left" Margin="72,26,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="定数"/>
-            <TextBlock HorizontalAlignment="Left" Margin="72,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="分数"/>
-            <TextBlock HorizontalAlignment="Left" Margin="72,86,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="PTT"/>
-            <Button x:Name="CalcButton" Content="计算" HorizontalAlignment="Center" Margin="0,120,0,0" VerticalAlignment="Top" Width="40" Click="CalcButton_Click" IsDefault="True"/>
+        <Grid x:Name="PttGrid" HorizontalAlignment="Center" VerticalAlignment="Center" Width="380" Height="180" Visibility="Collapsed">
+            <TextBox x:Name="DefLv" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="17" Margin="0,45,0,0"/>
+            <TextBox x:Name="Score" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="17" Margin="0,75,0,0"/>
+            <TextBox x:Name="PTT" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="17" Margin="0,105,0,0"/>
+            <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Text="定数" Margin="0,45,160,0"/>
+            <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Text="分数" Margin="0,75,160,0"/>
+            <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Text="PTT" Margin="0,105,160,0"/>
+            <Button x:Name="CalcButton" Content="计算" HorizontalAlignment="Center" Margin="0,135,0,0" VerticalAlignment="Top" Width="40" Click="CalcButton_Click" IsDefault="True"/>
+            <Button x:Name="MainPageButton" Content="Main Page" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,20,10" Width="72" Height="20" Click="MainPageButton_Click"/>
         </Grid>
     </Grid>
 </Window>
