--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -26,7 +26,7 @@
             <Button x:Name="ConfirmButton" Content="Confirm" Click="Button_Click" FontSize="16" Width="70" Height="24" HorizontalAlignment="Center" VerticalAlignment="Bottom" IsDefault="True"/>
         </Grid>
 
-        <Grid x:Name="PttGrid" HorizontalAlignment="Center" VerticalAlignment="Center" Width="380" Height="180" Visibility="Collapsed">
+        <Grid x:Name="PttGrid" HorizontalAlignment="Center" VerticalAlignment="Center" Width="380" Height="180">
             <TextBox x:Name="DefLv" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="17" Margin="0,45,0,0"/>
             <TextBox x:Name="Score" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="17" Margin="0,75,0,0"/>
             <TextBox x:Name="PTT" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="17" Margin="0,105,0,0"/>
