--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,7 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
+        xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
+        xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
+        fw:AcrylicWindow.Enabled="True"
+        fw:AcrylicWindow.AcrylicWindowStyle="None"
         Title="Nothing Is But What Is Not" Width="400" Height="200" Cursor="SizeAll" WindowStyle="None"
         WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" MouseDown="Window_MouseDown">
 
@@ -14,9 +18,13 @@
         </Style>
     </Window.Resources>
 
-    <Grid x:Name="MainGrid">
+    <!--<WindowChrome.WindowChrome>
+        <WindowChrome GlassFrameThickness="-1"/>
+    </WindowChrome.WindowChrome>-->
 
-        <Rectangle HorizontalAlignment="Center" Height="200" Stroke="Black" VerticalAlignment="Center" Width="400" StrokeThickness="2"/>
+    <Grid x:Name="MainGrid" fw:PointerTracker.Enabled="True" Background="Transparent">
+
+        <Rectangle HorizontalAlignment="Center" Height="200" Stroke="DarkOrchid" VerticalAlignment="Center" Width="400" StrokeThickness="1"/>
         <TextBlock x:Name="Title" HorizontalAlignment="Left" Margin="20,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="100" Text="???" FontSize="20"/>
         <Button x:Name="CloseButton" Content="X" HorizontalAlignment="Right" VerticalAlignment="Top" Width="20" Height="20" Margin="0,10,10,0" Click="CloseButton_Click"/>
         <Button x:Name="MinimizeButton" Content="--" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,40,0" Width="20" Height="20" FontWeight="Normal" Click="MinimizeButton_Click"/>
